zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/Modelo_Sucursal__c.object-meta.xml
<CustomObject>
    <description>Que modelos atiende cada sucursal. Evita agendar una unidad en un taller que no da servicio a ese modelo.</description>
    <label>Modelo por sucursal</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modelos por sucursal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>