zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Falso desactiva la combinacion sin borrar historico.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>