zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Capacidad_Diaria__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Diaria__c</fullName>
    <description>Unidades de este modelo que la sucursal puede atender por dia.</description>
    <label>Capacidad diaria</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>