zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 que representa el modelo o linea de unidad.</description>
    <label>Modelo</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sucursales que atienden</relationshipLabel>
    <relationshipName>Sucursales_Que_Atienden</relationshipName>
    <type>Lookup</type>
</CustomField>