zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Nivel_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Servicio__c</fullName>
    <description>Alcance real del taller para ese modelo. El agente no ofrece trabajos fuera de este alcance.</description>
    <label>Nivel de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio completo</fullName>
                <default>true</default>
                <label>Servicio completo</label>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Diagnostico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>