zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Sistemas_Soportados__c.field-meta.xml
<CustomField>
    <fullName>Sistemas_Soportados__c</fullName>
    <description>Sistema de la unidad que la sucursal puede reparar para este modelo.</description>
    <label>Sistema soportado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tren motriz</fullName>
            </value>
            <value>
                <fullName>Cabina</fullName>
            </value>
            <value>
                <fullName>Frenos</fullName>
            </value>
            <value>
                <fullName>Refrigeracion</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>