zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Taller que atiende el modelo.</description>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Modelos atendidos</relationshipLabel>
    <relationshipName>Modelos_Atendidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>