zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/validationRules/Capacidad_Diaria_Positiva.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacidad_Diaria_Positiva</fullName>
    <active>true</active>
    <errorConditionFormula>Capacidad_Diaria__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Capacidad_Diaria__c</errorDisplayField>
    <errorMessage>La capacidad diaria no puede ser negativa.</errorMessage>
</ValidationRule>