zapata-dx/force-app/main/default/objects/Modelo_Sucursal__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Sucursal__c</columns>
    <columns>Modelo__c</columns>
    <columns>Sistemas_Soportados__c</columns>
    <columns>Nivel_Servicio__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>